# golfcal2

./: -  .cache.sqlite  .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  __init__.py  __main__.py  app.py  cli.py  docker-compose.yml  docs_generator.py  exceptions.py  golfcal2.service  golfcal2_service.py  kalenteri vaihto uusi.csv  log.txt  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_exceptions.py  weather_locations.db
.github/workflows/: ci.yml  python-app.yml  security.yml
api/: base.py  base_api.py  nex_golf.py  teetime.py  wise_golf.py  wise_golf.py.bak
api/crm/: base.py  new_crm.py
api/models/: reservation.py
config/: README.md  clubs.json  config.py  config.yaml  config.yaml.example  env.py  error_aggregator.py  external_events.yaml  loader.py  logging.py  logging_config.py  logging_config.yaml  logging_filters.py  logging_handlers.py  models.py  settings.py  test_events.json  test_events.yaml  types.py  validation.py
docs/: README.md  conf.py  index.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/api/: models.html  services.html  utils.html
docs/api/: README.md  base_classes.md  crm_apis.md  data_models.md  error_classes.md  models.rst
docs/api/crm/: nexgolf.md  teetime.md  wisegolf.md
docs/api/services/: auth.md  calendar.md  external-events.md  reservation.md  weather.md
docs/api/weather/: README.md  aemet.md  met.md  openmeteo.md  openweather.md
docs/architecture/: data-flow.md  error_handling.md  models.md  overview.md  services.md
docs/contributing/: code_style.md  development_setup.md  testing.md
docs/deployment/: configuration.md  deployment.md  environment.md  monitoring.md
docs/development/: auth_service.md  base_api.md  crm_integration.md  crm_systems.md  data_models.md  error_handling.md  setup.md  testing.md  weather_service.md  weather_services.md
docs/development/weather_services/: aemet.md  caching.md  data_models.md  error_handling.md  iberian.md  interface.md  ipma.md  mediterranean.md  met_no.md  open_weather.md
docs/overview/: architecture.md  getting_started.md  introduction.md
docs/services/: README.md  cli.md
docs/services/auth/: README.md
docs/services/calendar/: README.md
docs/services/external-events/: README.md  event-processing.md
docs/services/golf_clubs/: README.md
docs/services/reservation/: README.md
docs/services/weather/: README.md  data-models.md  manager.md
docs/services/weather/diagrams/: weather_flow.md
docs/services/weather/providers/: iberian.md  met.md  openmeteo.md  openweather.md  portuguese.md
models/: __init__.py  event.py  golf_club.py  membership.py  mixins.py  player.py  reservation.py  user.py
references/: aemet_api.md  iberian_weather_implementation.md  ipma.md  wisegolfAPIs.txt
scripts/: check.sh  clean.sh  docs.sh  setup.sh  test-data.sh
services/: WEATHER.md  __init__.py  auth_service.py  base_service.py  calendar_service.py  external_event_service.py  iberian_weather_service.py  mediterranean_weather_service.py  met_weather_service.py  open_meteo_service.py  open_weather_service.py  openweather_service.py  portuguese_weather_service.py  reservation_service.py  service_manager.py  weather_cache.db  weather_cache.py  weather_database.py  weather_schemas.py  weather_service.py  weather_types.py
services/cache/: __init__.py  location_cache.py  weather_cache.py
services/calendar/builders/: __init__.py  calendar_builder.py  event_builder.py
src/: .cursorrules
src/golfcal2/: __init__.py  __main__.py  app.py  cli.py  error_codes.py  exceptions.py  golfcal2_service.py  health.py  metrics.py  metrics_prometheus.py  server.py  service.py  test_exceptions.py
src/golfcal2/api/: __init__.py  api_utils.py  base_api.py  interfaces.py  nex_golf.py  teetime.py  wise_golf.py
src/golfcal2/api/crm/: base.py  new_crm.py  nex_golf.py  teetime.py  wise_golf.py
src/golfcal2/api/models/: reservation.py
src/golfcal2/config/: clubs.json  clubs.json.example  config.yaml  env.py  error_aggregator.py  logging.py  logging_config.py  logging_config.yaml  logging_config.yaml.example  logging_filters.py  logging_handlers.py  settings.py  settings.pyi  test_events.yaml  types.py  types.pyi  users.json  users.json.example  utils.py  validation.py  wisegolf_endpoints.json
src/golfcal2/config_data/: club_coordinates.json  external_events.yaml  wisegolf_club_details.json
src/golfcal2/ics/: Jarkko-dev.ics  Jarkko.ics  Nana.ics  Seven.ics
src/golfcal2/models/: __init__.py  golf_club.py  membership.py  mixins.py  nex_golf.py  player.py  reservation.py  user.py
src/golfcal2/services/: README.md  __init__.py  auth_service.py  base_service.py  calendar_service.py  csv_import_service.py  external_event_service.py  iberian_weather_service.py  met_weather_service.py  met_weather_strategy.py  mixins.py  mock_weather_service.py  mock_weather_strategy.py  notification_service.py  open_meteo_service.py  open_meteo_strategy.py  pushover_service.py  reservation_factory.py  reservation_processor.py  reservation_service.py  weather_cache.py  weather_database.py  weather_formatter.py  weather_location_cache.py  weather_manager.py  weather_service.py  weather_types.py  wise_golf_discovery_service.py
src/golfcal2/utils/: api_handler.py  cli_utils.py  database.py  logging_utils.py  rate_limiter.py  time_utils.py  timezone_utils.py  weather_utils.py
tests/: conftest.py  run_tests.py  test_cli.py
tests/api/: __init__.py  test_base_api.py
tests/services/: __init__.py  mock_weather_service.py  test_iberian_weather_service.py  test_mock_weather_service.py  test_portuguese_weather_service.py  test_weather_service.py
tests/utils/: __init__.py  test_rate_limiter.py
utils/: config_utils.py  database.py  logging_utils.py  timezone_utils.py  utils.py  weather_utils.py
(+14 files in other folders)
