[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "golfcal2"
version = "0.1.0"
description = "Golf calendar application"
authors = [
    {name = "Janne Ahonen", email = "jahonen@example.com"},
]
dependencies = [
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "typing-extensions>=4.9.0",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "types-requests>=2.31.0",
    "types-python-dateutil>=2.8.19",
]

[project.urls]
Homepage = "https://github.com/jahonen/golfcal2"
Repository = "https://github.com/jahonen/golfcal2.git"
Documentation = "https://github.com/jahonen/golfcal2#readme"
"Bug Tracker" = "https://github.com/jahonen/golfcal2/issues"

[project.scripts]
golfcal2 = "golfcal2.cli:main"
golfcal2-service = "golfcal2.service:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["golfcal2*"]

[tool.setuptools.package-data]
golfcal2 = [
    "py.typed",
    "config/*.yaml",
    "config/*.json"
]

[tool.ruff]
line-length = 120
target-version = "py312"
select = [
    "E",
    "F",
    "B",
    "I",
    "N",
    "UP",
    "PL",
    "RUF"
]
ignore = [
    "E501",
    "B008",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "N818",
    "RUF012",
]

[tool.ruff.isort]
force-single-line = true
lines-after-imports = 2

[tool.ruff.mccabe]
max-complexity = 15

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101", "TID252", "PLR0913", "PLR0915"]
"**/cli.py" = ["PLR0912", "PLR0915"]
"**/api/*.py" = ["PLR0912", "PLR0915"]
"**/models/*.py" = ["PLR0912", "PLR0915"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openmeteo_requests.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests_cache.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "retry_requests.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "icalendar.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra -q --cov=src/golfcal2 --cov-report=xml"
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101"]  # Allow assert statements in tests
targets = ["src/golfcal2"]

[tool.bandit.assert_used]
skips = ["*/test_*.py"] 